# cowSolver

./: CONTRIBUTING.md  Cargo.toml  README.md
.github/: PULL_REQUEST_TEMPLATE.md
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/core/src/domain/: chains.rs  mod.rs  orders.rs  tokens.rs
crates/core/src/math/: mod.rs
crates/core/src/settlement/: mod.rs
crates/core/src/solver/: engine.rs  matching.rs  mod.rs  pricing.rs  routing.rs
docs/: DEVELOPMENT_LOG.md
