[workspace]
members = [
    "crates/core",
    "crates/adapters",
    "crates/strategy",
    "crates/bridge",
    "bin/solver-cli",
    "bin/solver-daemon",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["0xtechroot <root@ancilar.com>"]
license = "MIT"
repository = "https://github.com/0xtechroot/cowSolver"

[workspace.dependencies]
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"
ethers = "2.0"
reqwest = { version = "0.11", features = ["json"] }
clap = { version = "4.4", features = ["derive"] }
config = "0.14"
dotenv = "0.15"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
